added to CSS and HTML

--- a/index.html
+++ b/index.html
@@ -11,34 +11,42 @@
 </head>
 <body>
 
-    <header class="flex">
-
+    <header class="flex-header">
+        <div>
+          <img src="./Assets/images/Selfie.jpg" alt="Selfie of McKenna" id="selfie">
+        </div>
         <h1 id="header">McKenna</h1>
+       
         <ul>
 
                 <li>
-                  <a href="#about-me"></a>About Me </li>
-                <li> My Work </li>
-                <li> Contact Me </li>
-                <li> Resume </li>
+                  <a href="#about-me">About Me</a> </li>
+                <li>
+                  <a href="#my-work"> My Work</a> </li>
+                <li>
+                  <a href="#contact-me"> Contact Me</a> </li>
+                <li>
+                  <a href="#resume"> Resume</a> </li>
         </ul>
 
     </header>
-<h2 class="fun_fact">Fun fact</h2>
+<h2 class="fun_fact">My dogs name is toast.</h2>
 
-<article class="flex about-me">About Me
+<article class="flex about-me" id="about-me">About Me
     <p>Hi there! Welcome to my portfolio. I am excited for you to explore the projects I have finished throughout my journey as a software developer. I just began this journey in 2021 and cannot believe the progress I have made. Most of the projects you will see were done during my time at the KU Coding Bootcamp, which so far has been an amazing experience. I can't wait to continue to update my website with more projects! </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde harum enim tenetur autem, itaque reiciendis fuga nihil, repellendus sequi ducimus nulla! Sed odit ratione laborum eaque debitis minus exercitationem labore!</p>
+    <p>Outside of programming I have a huge passion for reading. I can get caught up in almost any book and I won't notice how much time has gone by.I also love my dog Toast with all of my heart. he is a one year old havanese poodle mix. while Toast is adorable he is very obnoxious and that's what I love about him.</p>
   </article>
 
-<a >My Work</a>
+<a id="my-work">My Work</a>
 <section class="row">
 
-<div class="column">
+<div class="column-1">
     <figure class="card-1">
-      <img src="./Assets/images/coming_soon.jpeg" alt="Avatar">
+      <a href="https://mac-codes.github.io/challenge-1/">
+      <img src="./Assets/images/challenge1.img" alt="Avatar" style="width: 100%">
       <div class="container">
-        <h3><b>Coming Soon</b></h3>
+        </a>
+        <h3>Horiseon Project</h3>
       </div>
     </figure>
   </div>
@@ -76,9 +84,9 @@
     </figure>
   </div>
 </section>
-<a class="flex">Contact Me
+<a  id="contact-me"class="flex-footer" >Contact Me
     <ul>
-        <li>E-mail: McKenna.Lawson01@gmail.com</li>
+        <li ">E-mail: McKenna.Lawson01@gmail.com </li>
     </ul>
   </a>
 
