--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header class="flex-header">
-        <div>
+        <div class="selfie">
           <img src="./Assets/images/Selfie.jpg" alt="Selfie of McKenna" id="selfie">
         </div>
         <h1 id="header">McKenna</h1>
@@ -43,7 +43,7 @@
 <div class="column-1">
     <figure class="card-1">
       <a href="https://mac-codes.github.io/challenge-1/">
-      <img src="./Assets/images/challenge1.img" alt="Avatar" style="width: 100%">
+      <img src="./Assets/images/horiseon.png" alt="Avatar" style="width: 100%">
       <div class="container">
         </a>
         <h3>Horiseon Project</h3>
