--- a/index.html
+++ b/index.html
@@ -1,92 +1,104 @@
-
-<!DOCTYPE html>
+›<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./Assets/Style.css">
-    <title>McKenna Lawson</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="./Assets/Style.css">
+  <title>McKenna Lawson</title>
 </head>
+
 <body>
 
-    <header class="flex-header">
-        <div>
-          <img src="./Assets/images/Selfie.jpg" alt="Selfie of McKenna" id="selfie">
-        
-        <h1 id="header">McKenna</h1>
-       </div>
-        <ul>
+  <header class="flex-header">
+    <div>
+      <img src="./Assets/images/Selfie.jpg" alt="Selfie of McKenna" id="selfie">
 
-                <li>
-                  <a href="#about-me">About Me</a> </li>
-                <li>
-                  <a href="#my-work"> My Work</a> </li>
-                <li>
-                  <a href="#contact-me"> Contact Me</a> </li>
-                <li>
-                  <a href="#resume"> Resume</a> </li>
-        </ul>
+      <h1 id="header">McKenna</h1>
+    </div>
+    <ul>
 
-    
-<h2 id="fun_fact">My dogs name is toast.</h2>
-</header>
-<article class="flex about-me" id="about-me">About Me
-    <p>Hi there! Welcome to my portfolio. I am excited for you to explore the projects I have finished throughout my journey as a software developer. I just began this journey in 2021 and cannot believe the progress I have made. Most of the projects you will see were done during my time at the KU Coding Bootcamp, which so far has been an amazing experience. I can't wait to continue to update my website with more projects! </p>
-    <p>Outside of programming I have a huge passion for reading. I can get caught up in almost any book and I won't notice how much time has gone by.I also love my dog Toast with all of my heart. he is a one year old havanese poodle mix. while Toast is adorable he is very obnoxious and that's what I love about him.</p>
+      <li>
+        <a href="#about-me">About Me</a>
+      </li>
+      <li>
+        <a href="#my-work"> My Work</a>
+      </li>
+      <li>
+        <a href="#contact-me"> Contact Me</a>
+      </li>
+      <li>
+        <a href="#resume"> Resume</a>
+      </li>
+    </ul>
+
+
+    <h2 id="fun_fact">My dogs name is toast.</h2>
+  </header>
+  <article class="flex about-me" id="about-me">About Me
+    <p>Hi there! Welcome to my portfolio. I am excited for you to explore the projects I have finished throughout my
+      journey as a software developer. I just began this journey in 2021 and cannot believe the progress I have made.
+      Most of the projects you will see were done during my time at the KU Coding Bootcamp, which so far has been an
+      amazing experience. I can't wait to continue to update my website with more projects! </p>
+    <p>Outside of programming I have a huge passion for reading. I can get caught up in almost any book and I won't
+      notice how much time has gone by.I also love my dog Toast with all of my heart. he is a one year old havanese
+      poodle mix. while Toast is adorable he is very obnoxious and that's what I love about him.</p>
   </article>
 
-<a id="my-work">My Work</a>
-<section class="row">
+  <a id="my-work">My Work</a>
+  <section class="row">
 
-<div class="column-1">
-    <figure class="card-1">
-      <a href="https://mac-codes.github.io/challenge-1/">
-      <img src="./Assets/images/horiseon.png" alt="Avatar" style="width: 100%">
-      <div class="container">
+    <div class="column-1">
+      <figure class="card-1">
+        <a href="https://mac-codes.github.io/challenge-1/">
+          <img src="./Assets/images/horiseon.png" alt="Avatar" style="width: 100%">
+          <div class="container">
         </a>
         <h3>Horiseon Project</h3>
-      </div>
+    </div>
     </figure>
-  </div>
+    </div>
 
-  <div class="column">
-    <figure class="card">
-      <img class='card-image' src="./Assets/images/coming_soon.jpeg" alt="Avatar">
-      <div class="container">
-        <h3>Coming Soon</h3>
-      </div>
+    <div class="column">
+      <figure class="card">
+        <a href="https://mac-codes.github.io/Recipes-and-Cocktails/">
+          <img class='card-image' src="./Assets/images/recip.png" alt="Avatar">
+          <div class="container">
+        </a>
+        <h3>RECIPropcity</h3>
+    </div>
     </figure>
-  </div>
-  <div class="column">
-    <figure class="card">
-      <img class='card-image' src="./Assets/images/coming_soon.jpeg" alt="Avatar">
-      <div class="container">
-        <h3>Coming Soon</h3>
-      </div>
-    </figure>
-  </div>
-  <div class="column">
-    <figure class="card">
-      <img class='card-image' src="./Assets/images/coming_soon.jpeg" alt="Avatar">
-      <div class="container">
-        <h3>Coming Soon</h3>
-      </div>
-    </figure>
-  </div>
-  <div class="column">
-    <figure class="card">
-      <img class='card-image' src="./Assets/images/coming_soon.jpeg" alt="Avatar">
-      <div class="container">
-        <h3>Coming Soon</h3>
-      </div>
-    </figure>
-  </div>
-</section>
-<a  id="contact-me"class="flex-footer" >Contact Me
+    </div>
+    <div class="column">
+      <figure class="card">
+        <img class='card-image' src="./Assets/images/coming_soon.jpeg" alt="Avatar">
+        <div class="container">
+          <h3>Coming Soon</h3>
+        </div>
+      </figure>
+    </div>
+    <div class="column">
+      <figure class="card">
+        <img class='card-image' src="./Assets/images/coming_soon.jpeg" alt="Avatar">
+        <div class="container">
+          <h3>Coming Soon</h3>
+        </div>
+      </figure>
+    </div>
+    <div class="column">
+      <figure class="card">
+        <img class='card-image' src="./Assets/images/coming_soon.jpeg" alt="Avatar">
+        <div class="container">
+          <h3>Coming Soon</h3>
+        </div>
+      </figure>
+    </div>
+  </section>
+  <a id="contact-me" class="flex-footer">Contact Me
     <ul>
-        <li ">E-mail: McKenna.Lawson01@gmail.com </li>
+      <li ">E-mail: McKenna.Lawson01@gmail.com </li>
     </ul>
   </a>
 
